syntax = "proto3";

package nibiru.vpool.v1;

import "gogoproto/gogo.proto";
import "vpool/v1/state.proto";

option go_package = "github.com/NibiruChain/nibiru/x/vpool/types";

message CreatePoolProposal {
  string title = 1;
  string description = 2;
  // pair represents the pair of the vpool.
  string pair = 3;
  // quote_asset_reserve is the amount of quote asset the pool will be initialized with.
  string quote_asset_reserve = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // base_asset_reserve is the amount of base asset the pool will be initialized with.
  string base_asset_reserve = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  VpoolConfig config = 7 [
    (gogoproto.nullable) = false
  ];
}

message EditPoolConfigProposal {
  string title = 1;
  string description = 2;
  string pair = 3;
  VpoolConfig config = 4 [
    (gogoproto.nullable) = false
  ];
}